<resources>
    <string name="app_name">Money Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_text_hint_amount">Enter The Amount</string>
    <string name="Category">Category:</string>
    <string name="select_type">Select The Type: </string>
    <string name="Income">Income</string>
    <string name="Expense">Expense</string>
    <string name="date_btn">Enter the Date</string>
    <string name="note">Note:</string>
    <string name="note_hint">Note</string>
    <string name="Save_btn">Save</string>
    <string name="filter_trans">Filter Transaction</string>
    <string name="filterUsingDate">Filter by date</string>
    <string name="yourBalance">Your Balance:</string>
    <string name="totalIncome">total income: </string>
    <string name="totalExpense">total expense: </string>
    <string name="myAllTransaction">My All Transactions</string>
    <string name="reportsAndCharts">Reports &amp; Charts</string>
    <string name="darkMode">Dark Mode</string>
    <string name="darkModeDiscreption">Enable dark mode for easier reading at night</string>
    <string name="type">Type:</string>
    <string name="date">Date:</string>
    <string name="edit_btn">Edit</string>
    <string name="delete_btn">Delete</string>
    <string name="dialogDeleteLabel">Delete Transaction</string>
    <string name="confirmDeleting">Are You Sure You want to Delete the transaction?</string>
    <string name="cancel_btn">Cancel</string>
    <string name="dateFilter_label">Date Filtering</string>
    <string name="dateFilterDiscribe">Select The start and end date</string>
    <string name="startDate_btn">Start Date</string>
    <string name="endDate_btn">End Date</string>
    <string name="confirm_btn">Confirm</string>
    <string name="Filtering">Filtering</string>
    <string name="Filter_dicribe">Select The start and end date</string>
    <string name="All_Categories">All Categories</string>
    <string name="radio_type">select type:</string>
    <string name="category_">Category</string>

</resources>