<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmDeleting"
        android:textColor="@color/White_black_color"
        android:textSize="17sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_checkIn" />

    <TextView
        android:id="@+id/textView_checkIn"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/dialogDeleteLabel"
        android:textColor="#FF0000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="130dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_checkIn">


        <Button
            android:id="@+id/confirm_BTN"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:text="@string/delete_btn"
            android:textAllCaps="false"
            android:textColor="#FF0000" />

        <Button
            android:id="@+id/cancel_BTN"
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/delete_btn"
            android:textAllCaps="false"
            android:textColor="@color/White_black_color" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>